--- a/Lightspark/Config/DefaultEngine.ini
+++ b/Lightspark/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/MainMenu.MainMenu
-GlobalDefaultGameMode="/Script/Lightspark.LightsparkGameMode"
+GlobalDefaultGameMode=/Script/Lightspark.LightsparkGameMode
 
 
 [/Script/Engine.Engine]
