--- a/Lightspark/Config/DefaultEngine.ini
+++ b/Lightspark/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+EditorStartupMap=/Game/Maps/02_prototype_pass.02_prototype_pass
 GlobalDefaultGameMode="/Script/Lightspark.LightsparkGameMode"
 
 
@@ -15,4 +15,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
