--- a/Lightspark/Config/DefaultEngine.ini
+++ b/Lightspark/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/Maps/02_prototype_pass.02_prototype_pass
+GameDefaultMap=/Game/Maps/04_asset_pass.04_asset_pass
+EditorStartupMap=/Game/Maps/04_asset_pass.04_asset_pass
 GlobalDefaultGameMode="/Script/Lightspark.LightsparkGameMode"
 
 
