--- a/Lightspark/Config/DefaultGame.ini
+++ b/Lightspark/Config/DefaultGame.ini
@@ -1,3 +1,31 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1C4A4E884476E5E083AB9695F87A6257
 ProjectName=Third Person Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="C:/Users/Philip/Desktop/Lightspark_level_preview")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+bNativizeBlueprintAssets=False
+UsePakFile=True
+bGenerateChunks=False
+bChunkHardReferencesOnly=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path=)
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeCrashReporter=True
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+DefaultCulture=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bSkipEditorContent=False
+-MapsToCook=(FilePath=)
++MapsToCook=(FilePath="../../../../../../Users/Philip/Desktop/Lightspark Git/Lightspark/Lightspark/Content/Maps/04_asset_pass.umap")
+
+
