Level is properly loaded on player death

--- a/Lightspark/Config/DefaultGame.ini
+++ b/Lightspark/Config/DefaultGame.ini
@@ -26,6 +26,6 @@ bCookMapsOnly=False
 bCompressed=False
 bSkipEditorContent=False
 -MapsToCook=(FilePath=)
-+MapsToCook=(FilePath="../../../../../../Users/Philip/Desktop/Lightspark Git/Lightspark/Lightspark/Content/Maps/04_asset_pass.umap")
++MapsToCook=(FilePath="../../../../../../Projects/Lightspark/Lightspark/Lightspark/Content/Maps/03_prototype_pass_Flower_Events.umap")
 
 
