--- a/Lightspark/Config/DefaultEngine.ini
+++ b/Lightspark/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/03_prototype_pass_Flower_Events.03_prototype_pass_Flower_Events
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/04_asset_pass.04_asset_pass
 GlobalDefaultGameMode="/Script/Lightspark.LightsparkGameMode"
 
