--- a/Lightspark/Config/DefaultGame.ini
+++ b/Lightspark/Config/DefaultGame.ini
@@ -4,7 +4,7 @@ ProjectName=Third Person Game Template
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="C:/Users/philip.baum/Desktop/Gate01_Build_Lightspark")
+StagingDirectory=(Path="C:/Users/philip.baum/Desktop/Lightspark_Gate01_Build_1.1.0")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -25,9 +25,9 @@ bCookAll=False
 bCookMapsOnly=False
 bCompressed=False
 bSkipEditorContent=False
--MapsToCook=(FilePath="../../../../../../Users/philip.baum/Desktop/Lightspark_Git/Lightspark/Lightspark/Content/Maps/MainMenu.umap")
--MapsToCook=(FilePath="../../../../../../Projects/Lightspark/Lightspark/Lightspark/Content/Maps/04_asset_pass.umap")
-+MapsToCook=(FilePath="../../../../../../Users/philip.baum/Desktop/Lightspark_Git/Lightspark/Lightspark/Content/Maps/MainMenu.umap")
-+MapsToCook=(FilePath="../../../../../../Users/philip.baum/Desktop/Lightspark_Git/Lightspark/Lightspark/Content/Maps/04_asset_pass.umap")
+-MapsToCook=(FilePath="../../../../../../Lightspark_Git/Lightspark/Lightspark/Content/Maps/MainMenu.umap")
+-MapsToCook=(FilePath="../../../../../../Users/philip.baum/Desktop/Lightspark_Git/Lightspark/Lightspark/Content/Maps/04_asset_pass.umap")
++MapsToCook=(FilePath="../../../../../../Lightspark_Git/Lightspark/Lightspark/Content/Maps/MainMenu.umap")
++MapsToCook=(FilePath="../../../../../../Lightspark_Git/Lightspark/Lightspark/Content/Maps/04_asset_pass.umap")
 
 
