--- a/Lightspark/Config/DefaultEngine.ini
+++ b/Lightspark/Config/DefaultEngine.ini
@@ -15,3 +15,7 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.AudioSettings]
+DefaultSoundClassName=/Game/SoundClasses/Master.Master
+
