Tweaked trigger box blueprints + set max flash light uses

--- a/Lightspark/Config/DefaultEngine.ini
+++ b/Lightspark/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Maps/StartupScreen.StartupScreen
 EditorStartupMap=/Game/Maps/04_asset_pass.04_asset_pass
 GlobalDefaultGameMode="/Script/Lightspark.LightsparkGameMode"
 
