--- a/Lightspark/Config/DefaultInput.ini
+++ b/Lightspark/Config/DefaultInput.ini
@@ -36,11 +36,12 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 -ActionMappings=(ActionName="Checkpoint_8",Key=Nine,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Checkpoint_9",Key=Zero,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Consume",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="DisableEnergyLoss",Key=C,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="FlashOfLight",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Interact",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Interact",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Jump",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Jump",Key=Gamepad_LeftShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Pause Game",Key=End,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Pause Game",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -49,7 +50,6 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 -ActionMappings=(ActionName="Spend",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Sprint",Key=Gamepad_LeftShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Sprint",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="DisableEnergyLoss",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Checkpoint_0",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Checkpoint_1",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Checkpoint_2",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -61,11 +61,11 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 +ActionMappings=(ActionName="Checkpoint_8",Key=Nine,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Checkpoint_9",Key=Zero,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Consume",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DisableEnergyLoss",Key=C,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="FlashOfLight",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Interact",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Interact",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Jump",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Jump",Key=Gamepad_LeftShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Pause Game",Key=End,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Pause Game",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -74,7 +74,6 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 +ActionMappings=(ActionName="Spend",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Sprint",Key=Gamepad_LeftShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Sprint",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="DisableEnergyLoss",Key=V,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=-1.000000)
 -AxisMappings=(AxisName="LookUpRate",Key=Gamepad_RightY,Scale=1.000000)
 -AxisMappings=(AxisName="MoveForward",Key=Down,Scale=-2.000000)
