Fixed cutscene bug on load + tweaked sound volumes

--- a/Lightspark/Config/DefaultEngine.ini
+++ b/Lightspark/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartupScreen.StartupScreen
-EditorStartupMap=/Game/Maps/04_asset_pass.04_asset_pass
+EditorStartupMap=/Game/Maps/Segment_01_the_crypt/Segment_01_the_crypt.Segment_01_the_crypt
 GlobalDefaultGameMode="/Script/Lightspark.LightsparkGameMode"
+
 [/Script/Engine.AudioSettings]
 DefaultSoundClassName=/Game/SoundClasses/Master.Master
 
